# Swoosh

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: main.cpp.CED8A7369EA29199.idx
aux/: Airfoil.py  naca0012.geo  naca0012_mesh.geo  naca0012_mesh.msh  naca0012_ufsc.geo  s9104.geo
src/: Airfoil.py  CMakeLists.txt  Vec2.hpp  ints.hpp  main.cpp  naca0012_mesh.geo  naca0012_mesh.msh
src/colors/: Rgb.hpp
